beginning episodes work

--- a/app/views/demo/stream.erb
+++ b/app/views/demo/stream.erb
@@ -3,13 +3,22 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>PARadio Stream</title>
-    <script language="javascript" type="text/javascript" src="../swfobject.js"></script>
+    <script language="javascript" type="text/javascript" src="../swfobject.js"></script>\
+    <style>
+      #audio-section{
+        height: 5em;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    </style>
 </head>
 
 <body>
   <h1>Test Stream!</h1>
-  <audio controls autoplay="true">
-    <source src="http://54.191.224.62:8000/ices" type="audio/ogg">
-  </audio>
+  <div id="audio-section">
+    <audio controls autoplay="true">
+      <source src="http://54.191.224.62:8000/ices" type="audio/ogg">
+    </audio>
+  </div>
 </body>
 </html>
