--- a/app/views/media_files/index.html.erb
+++ b/app/views/media_files/index.html.erb
@@ -1,2 +1,34 @@
-<h1>MediaFiles#index</h1>
-<p>Find me in app/views/media_files/index.html.erb</p>
+<% if !flash[:notice].blank? %>
+   <div class = "alert alert-info">
+      <%= flash[:notice] %>
+   </div>
+<% end %>
+
+<br />
+
+<%= link_to "New mp3file", new_media_file_path, class: "btn btn-primary" %>
+<br />
+<br />
+
+<table class = "table table-bordered table-striped">
+   <thead>
+      <tr>
+         <th>Name</th>
+         <th>Download Link</th>
+         <th> </th>
+      </tr>
+   </thead>
+
+   <tbody>
+      <% @mediafiles.each do |mediafile| %>
+
+         <tr>
+            <td><%= mediafile.title %></td>
+            <td><%= link_to "Download mp3file", mediafile.attachment_url %></td>
+            <td><%= button_to "Delete",  mediafile, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{mediafile.title}?" %></td>
+         </tr>
+
+      <% end %>
+   </tbody>
+
+</table>
