--- a/app/views/mediafiles/index.html.erb
+++ b/app/views/mediafiles/index.html.erb
@@ -6,7 +6,7 @@
 
 <br />
 
-<%= link_to "New mp3file", new_media_file_path, class: "btn btn-primary" %>
+<%= link_to "New mp3file", new_mediafile_path, class: "btn btn-primary" %>
 <br />
 <br />
 
