Integrated mediafile with episode through has_one relationship. Updated migrations. Didn't break a sweat

--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -11,7 +11,7 @@
       </tr>
       <tr>
         <th>Episode Number</th>
-        <td><%= f.text_field(:episode_number) %></td>
+        <td><%= f.text_field(:number) %></td>
       </tr>
       <tr>
         <th>Stage</th>
