--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -10,7 +10,7 @@
     </tr>
     <tr>
       <th>Episode Number</th>
-      <td><%= @episode.episode_number %></td>
+      <td><%= @episode.number %></td>
     </tr>
     <tr>
       <th>Episode Stage</th>
