--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -11,7 +11,7 @@
       </tr>
       <tr>
         <th>Episode Number</th>
-        <td><%= f.text_field(:episode_number) %></td>
+        <td><%= f.text_field(:number) %></td>
       </tr>
       <tr>
         <th>Stage</th>
@@ -25,10 +25,12 @@
         <th>Transcript</th>
         <td><%= f.text_field(:transcript) %></td>
       </tr>
-      <tr>
-        <th>Media File</th>
-        <td><%= f.file_field :attachment %></td>
-      </tr>
+      <%= fields_for(@mediafile) do |m| %>
+        <tr>
+          <th>Media File</th>
+          <td><%= m.file_field :attachment %></td>
+        </tr>
+      <% end %>
     </table>
     <div class="form-buttons">
       <%= submit_tag("Create Episode")%>
