added navbar partial. began header work. cried about CSS being terrible (duh)

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -1,20 +1,24 @@
+<% @page_title="Episodes" %>
 <div class="episodes index">
   <h2>Episodes</h2>
   <%=link_to("Add New Episode", new_episode_path())%><!--Button here instead-->
-  <table class="listing table table-bordered table-striped" summary="Episode List">
+  <div><%= pluralize(@episodes.size,'episodes')%> found</div>
+  <table class="listing table table-bordered" summary="Episode List">
     <tr class="header">
       <th>Episode Number</th>
       <th>Episode Name</th>
       <th>Stage</th>
       <th>Media File</th>
+      <th>Last Updated</th>
       <th>Actions</th>
     </tr>
     <% @episodes.each do |episode| %>
-    <tr>
+    <tr class="<%=cycle('odd','even')%>">
       <td><%= episode.number %></td>
       <td><%= episode.name %></td>
       <td><%= episode.stage %></td><!--not necessary-->
       <td><%= episode.mediafile.title%></td><!--not necessary-->
+      <td><%= episode.updated_at.strftime("%a  %B %d, %Y at %I:%M %p")%></td>
       <td class="actions">
         <%= link_to("Show",{:action => 'show', :id => episode.id}, :class => 'action show') %> <!-- onclick this happens -->
         <!-- invisible until edit button toggled -->
