--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -6,35 +6,26 @@
       <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
       <%= csrf_meta_tags %>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-   </head>
-   <body>
-     <!--main layout-->
-     <!--Header here-->
-     <div class="container-fluid" style="max-width: 100%;">
-       <div class="row head">
-         <div class="col-lg-12">
-           <h1>Pinkerton Radio CMS</h1>
-         </div>
-       </div>
-    </div>
-     <div id="wrapper">
-       <%= render "shared/navbar" %>
-       <div id="page-content-wrapper">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class = "content">
-                <% if !flash[:notice].blank? %>
-                <div class="notice">
-                  <%= flash[:notice]%>
-                </div>
-                <% end %>
-                <%= yield %>
-              </div>
-            </div>
+    </head>
+    <body>
+      <!--main layout-->
+      <!--Header here-->
+      <div id="main-container" class="container-fluid">
+        <%=render('shared/topnav')%>
+        <div class="row">
+          <div id="sidebar" class="col-md-2 col-lg-2">
+          <%=render('shared/sidenav')%>
+          </div>
+          <div id="main-content" class="col-md-10 col-lg-10">
+            <% if !flash[:notice].blank? %>
+               <div class = "alert alert-info">
+                  <%= flash[:notice] %>
+               </div>
+            <% end %>
+            <%= yield %>
           </div>
         </div>
-     </div>
+      </div>
      <!--footer here-->
    </body>
 </html>
