styled more, began fixing streamitem controller errors

--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-stacked" role="navigation">
   <li>
-    <a href="#">Home</a>
+    <a href="home#index">Home</a>
   </li>
   <li class= "<%= (@page_title=="Episodes")? "active" : ""%>">
     <%= link_to("Episodes", episodes_path) %>
