--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,5 +1,5 @@
 <ul class="nav nav-stacked" role="navigation">
-  <li>
+  <li class= "<%= (@page_title=="Home")? "active" : ""%>">
     <a href="home#index">Home</a>
   </li>
   <li class= "<%= (@page_title=="Episodes")? "active" : ""%>">
