--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -3,30 +3,34 @@
   <h2>Episodes</h2>
   <%=link_to("Add New Episode", new_episode_path())%><!--Button here instead-->
   <div><%= pluralize(@episodes.size,'episode')%> found</div>
-  <table class="listing table table-bordered" summary="Episode List">
-    <tr class="header">
-      <th>Episode Number</th>
-      <th>Episode Name</th>
-      <th>Stage</th>
-      <th>Media File</th>
-      <th>Last Updated</th>
-      <th>Actions</th>
-    </tr>
-    <% @episodes.each do |episode| %>
-    <tr style="background-color:<%=cycle('white','grey')%>;">
-      <td><%= episode.number %></td>
-      <td><%= episode.name %></td>
-      <td><%= episode.stage %></td><!--not necessary-->
-      <td><%= episode.mediafile.title%></td><!--not necessary-->
-      <td><%= episode.updated_at.strftime("%a  %B %d, %Y at %I:%M %p")%></td>
-      <td class="actions">
-        <%= link_to("Show",{:action => 'show', :id => episode.id}, :class => 'action show') %> <!-- onclick this happens -->
-        <!-- invisible until edit button toggled -->
-        <%= link_to("Edit",{:action => 'edit', :id => episode.id}, :class => 'action edit') %>
-        <!-- invisible until edit button toggled -->
-        <%= link_to("Delete", episode_path(episode), method: :delete) %>
-      </td>
-    </tr>
-    <% end %>
+  <table class="listing table table-bordered table-striped" summary="Episode List">
+    <thead>
+      <tr class="header">
+        <th>Episode Number</th>
+        <th>Episode Name</th>
+        <th>Stage</th>
+        <th>Media File</th>
+        <th>Last Updated</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @episodes.each do |episode| %>
+      <tr>
+        <td><%= episode.number %></td>
+        <td><%= episode.name %></td>
+        <td><%= episode.stage %></td><!--not necessary-->
+        <td><%= episode.mediafile.title%></td><!--not necessary-->
+        <td><%= episode.updated_at.strftime("%a  %B %d, %Y at %I:%M %p")%></td>
+        <td class="actions">
+          <%= link_to("Show",{:action => 'show', :id => episode.id}, :class => 'action show') %> <!-- onclick this happens -->
+          <!-- invisible until edit button toggled -->
+          <%= link_to("Edit",{:action => 'edit', :id => episode.id}, :class => 'action edit') %>
+          <!-- invisible until edit button toggled -->
+          <%= link_to("Delete", episode_path(episode), method: :delete) %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
   </table>
 </div>
