--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -18,7 +18,7 @@
           </div>
           <div id="main-content" class="col-md-10 col-lg-10">
             <% if !flash[:notice].blank? %>
-               <div class = "alert alert-info">
+               <div class = "notice alert alert-info">
                   <%= flash[:notice] %>
                </div>
             <% end %>
