--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -1,27 +1,28 @@
+<%= error_messages_for(@episode)%>
 <table summary="Episode form fields">
   <tr>
-    <th>Name</th>
+    <th><%= f.label(:name, "Name")%></th>
     <td><%= f.text_field(:name) %></td>
   </tr>
   <tr>
-    <th>Episode Number</th>
+    <th><%= f.label(:number, "Episode Number")%></th>
     <td><%= f.text_field(:number) %></td>
   </tr>
   <tr>
-    <th>Stage</th>
-    <td><%= f.text_field(:stage) %></td>
+    <th><%= f.label(:stage, "Stage")%></th>
+    <td><%= f.select(:stage, {"Authored"=>1, "Edited"=>2, "Published"=>3}) %></td>
   </tr>
   <tr>
-    <th>Description</th>
-    <td><%= f.text_field(:description) %></td>
+    <th><%= f.label(:description, "Description")%></th>
+    <td><%= f.text_area(:description, :size=> '40x10') %></td>
   </tr>
   <tr>
-    <th>Transcript</th>
-    <td><%= f.text_field(:transcript) %></td>
+    <th><%= f.label(:transcript, "Transcript")%></th>
+    <td><%= f.text_area(:transcript, :size=> '40x10') %></td>
   </tr>
   <%= fields_for(@mediafile) do |m| %>
     <tr>
-      <th>Media File</th>
+      <th><%= m.label(:attachment, "Media File")%></th>
       <td><%= m.file_field :attachment %></td>
     </tr>
   <% end %>
