--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -2,8 +2,8 @@
 
 <div class="menu">
   <h2> Admin Menu</h2>
-  <div class="identity">Logged in as:</div>
+  <div class="identity">Logged in as: <%= session[:email] %></div>
   <ul>
-    <li><%= link_to("Logout", :action=>'logout') %></li>
+    <li><%= link_to("Logout", logout_path) %></li>
   </ul>
 </div>
