began revamp of topnav

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -13,10 +13,10 @@
       <div id="main-container" class="container-fluid">
         <%=render('shared/topnav')%>
         <div class="row">
-          <div id="sidenav" class="col-md-2 col-lg-2">
+          <!--<div id="sidenav" class="col-md-2 col-lg-2">
           <%=render('shared/sidenav')%>
-          </div>
-          <div id="main-content" class="col-md-10 col-lg-10">
+          </div>-->
+          <div id="main-content" class="col-md-12 col-lg-12">
             <% if !flash[:notice].blank? %>
                <div class = "notice alert alert-info">
                   <%= flash[:notice] %>
