--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,7 +7,7 @@ html, body{
 
 #main-container{
   padding: 0px 0px 0px 0px;
-  height:100%;
+  //height:100%;
   .row{
     margin:0;
     height:100%
@@ -15,10 +15,45 @@ html, body{
 }
 
 #topnav{
-  .navbar-brand{
-    margin-top: 20px;
-    font-size: 2em;
-    color:#fff;
+  .navbar-header{
+    padding-top:20px;
+    .navbar-brand{
+      font-size: 2em;
+      color:#fff;
+    }
+  }
+  .nav{
+    .fill{
+      height:45px;
+    }
+    .user-access{
+      a{
+        color:#fff;
+      }
+      .dropdown-item{
+        a{
+          color:#000;
+        }
+      }
+      height:45px;
+      padding:10px 10px 10px 0px;
+      padding-right:10px;
+      padding-bottom: 10px;
+    }
+    .navbar-item{
+      
+      border-left:1px solid #F6F7EB;
+      .navbar-link{
+        display: block;
+        text-align: center;
+        font-size: 1.2em;
+        color:#fff;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+    margin-right:0;
+    padding:0
   }
   height:75px;
   background-color:#AF1818;
@@ -56,6 +91,7 @@ html, body{
 }
 
 #main-content{
+  padding:10px 10px 10px 10px;
   .notice{
     margin-top: 15px;
   }
