--- a/app/views/admin/access/login.html.erb
+++ b/app/views/admin/access/login.html.erb
@@ -1,4 +1,4 @@
-<% @page_title = "User Login" %>
+<% @page_title = "Login" %>
 <div class="login">
   <%=form_tag(:action=>'attempt_login') do %>
     <table>
