--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -17,11 +17,7 @@
           <%=render('shared/sidenav')%>
           </div>-->
           <div id="main-content" class="col-md-12 col-lg-12">
-            <% if !flash[:notice].blank? %>
-               <div class = "notice alert alert-info">
-                  <%= flash[:notice] %>
-               </div>
-            <% end %>
+            <%= render('shared/notice') %>
             <%= yield %>
           </div>
         </div>
@@ -29,3 +25,9 @@
      <!--footer here-->
    </body>
 </html>
+<script type="text/javascript">
+  $(".dismiss").click(function(event){
+    event.preventDefault();
+    $(this).closest('.dismissable').remove();
+  });
+</script>
