--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,19 +1,42 @@
 <nav id="topnav" class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
+  <div class="row">
+    <div class="navbar-header col-lg-3">
       <a class="navbar-brand" href="home#index">
-        PA Radio CMS
+        Pinkerton Radio
       </a>
     </div>
-    <ul id="topnav-links" class"nav navbar-nav">
-      <li id="home" class="nav-item"><%= link_to("Home", home_path) %></li>
-      <li id="listen" class="nav-item"><%= link_to("Listen", "#") %></li>
-      <% if !session[:user_id] %>
-        <li id="login" class="nav-item"><%=link_to("Log in", login_path)%></li>
+    <div class="col-lg-6"></div>
+    <div id="topnav-links" class="nav navbar-nav navbar-right col-lg-3">
+      <% if session[:user_id] %>
+        <div class="row user-access">
+          <div class="dropdown nav pull-right">
+            <a class="dropdown-toggle" data-toggle="dropdown"
+            href="#" role="button" aria-haspopup="true" aria-expanded="false">
+               <%= session[:user_email]%><span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-item"><%= link_to("Preferences", "#")%></li>
+              <li class="dropdown-item"><%=link_to("Logout", logout_path)%></li>
+            </ul>
+          </div>
+          <div class="dropdown nav pull-right">
+          </div>
+        </div>
       <% else %>
-        <li id="admin-panel" class"nav-item">
-          <%= link_to("Admin Panel", "#") %>
-        </li>
+        <div class="fill"></div>
       <% end %>
+      <div class="row">
+        <div class="navbar-item col-lg-4"><%= link_to("Home", home_path, :class=>"navbar-link") %></div>
+        <div class="navbar-item col-lg-4"><%= link_to("Listen", "#", :class=>"navbar-link") %></div>
+        <% if session[:user_id] %>
+          <div class="navbar-item col-lg-4">
+            <%= link_to("Admin", admin_index_path, :class=>"navbar-link") %>
+          </div>
+        <% else %>
+          <div class="navbar-item col-lg-4">
+            <%= link_to("Log in", login_path, :class=>"navbar-link") %>
+          </div>
+        <% end %>
+      </div>
   </div>
 </nav>
