--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -3,9 +3,9 @@
     <%= link_to("Home", home_path)%>
   </li>
   <li class= "<%= (@page_title=="Episodes")? "active" : ""%>">
-    <%= link_to("Episodes", episodes_path) %>
+    <%= link_to("Episodes", admin_episodes_path) %>
   </li>
   <li class="<%= (@page_title=="Livestream")? "active" : ""%>">
-    <%= link_to("Livestream", streamitems_path) %>
+    <%= link_to("Livestream", admin_streamitems_path) %>
   </li>
 </ul>
