--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.carousel-inner{
+  .item{
+    img{
+      width:100%;
+      margin:auto;
+    }
+    a{
+      img{
+        width:70%;
+        margin:auto;
+      }
+    }
+  }
+}
