--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -41,7 +41,7 @@ html, body{
       padding-bottom: 10px;
     }
     .navbar-item{
-      
+
       border-left:1px solid #F6F7EB;
       .navbar-link{
         display: block;
@@ -91,7 +91,7 @@ html, body{
 }
 
 #main-content{
-  padding:10px 10px 10px 10px;
+  padding:0px;
   .notice{
     margin-top: 15px;
   }
