--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -27,7 +27,7 @@
       <% end %>
       <div class="row">
         <div class="navbar-item col-lg-4"><%= link_to("Home", home_path, :class=>"navbar-link") %></div>
-        <div class="navbar-item col-lg-4"><%= link_to("Listen", "#", :class=>"navbar-link") %></div>
+        <div class="navbar-item col-lg-4"><%= link_to("Listen", listen_path, :class=>"navbar-link") %></div>
         <% if session[:user_id] %>
           <div class="navbar-item col-lg-4">
             <%= link_to("Admin", admin_index_path, :class=>"navbar-link") %>
