--- a/app/views/listen/index.html.erb
+++ b/app/views/listen/index.html.erb
@@ -1,6 +1,6 @@
 <%@page_title="Listen"%>
-<h2>MKAO 24/7</h2>
-<div class="home index">
+<div class="container">
+  <h2>MKAO 24/7</h2>
   <audio controls>
     <source src="http://54.191.224.62:8000/ices" type="audio/mpeg">
   Your browser does not support the audio element.
