added global glyphicon helper; started to style livestream page

--- a/app/assets/stylesheets/streamitems.scss
+++ b/app/assets/stylesheets/streamitems.scss
@@ -6,3 +6,7 @@
 li .active{
   background-color: "blue" !important;
 }
+#livestreamHeader{
+  border-bottom: 1px solid gray;
+  margin-bottom: 5px;
+}
