added setCols method to help with bootstrap styling

--- a/app/views/admin/episodes/index.html.erb
+++ b/app/views/admin/episodes/index.html.erb
@@ -1,5 +1,5 @@
 <% @page_title="Episodes" %>
-<div class="episodes index">
+<div class="episodes index container">
   <%= link_to("<- Back to Admin Panel", admin_index_path)%>
   <h2>Episodes</h2>
   <%=link_to("Add New Episode", new_admin_episode_path())%><!--Button here instead-->
