--- a/app/views/admin/access/index.html.erb
+++ b/app/views/admin/access/index.html.erb
@@ -1,6 +1,6 @@
 <% @page_title="Admin Panel"%>
 
-<div class="menu">
+<div class="admin container">
   <h2>Admin Panel</h2>
   <div class="row">
     <div class="col-lg-3">
