--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,14 +31,17 @@
         <h3 class="section-heading">About Us<h3>
       </div>
       <div class="row">
-        <div id="mission" class="panel">
-          mission
+        <div id="mission" class="panel <%= setCols(4)%>">
+          <div class="panel-heading"> Mission </div>
+          <div class="panel-body">Image of some inspiring stuff</div>
         </div>
-        <div id="team" class="panel">
-          team
+        <div id="team" class="panel <%= setCols(4)%>">
+          <div class="panel-heading"> Team </div>
+          <div class="panel-body"> Image of our current team </div>
         </div>
-        <div id="goal" class="panel">
-          goals
+        <div id="goal" class="panel <%= setCols(4)%>">
+          <div class="panel-heading">Vision</div>
+          <div class="panel-body"> Image of an eye or something majestic </div>
         </div>
       </div>
     </div>
