--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,13 +35,21 @@ html, body{
           color:#000;
         }
       }
+      #login-link{
+        display: block;
+        text-align: center;
+        font-size: 1em;
+        color:#fff;
+        padding-left: 35px;
+        margin-left: auto;
+        margin-right: auto;
+      }
       height:45px;
-      padding:10px 10px 10px 0px;
-      padding-right:10px;
+      padding:10px 0px 10px 0px;
       padding-bottom: 10px;
     }
     .navbar-item{
-
+      margin-top:5px;
       border-left:1px solid #F6F7EB;
       .navbar-link{
         display: block;
