--- a/app/views/shared/_notice.html.erb
+++ b/app/views/shared/_notice.html.erb
@@ -1,10 +1,6 @@
 <% if !flash[:notice].blank? %>
   <div class = "notice row alert alert-info dismissable">
-    <div class="pull-left col-lg-11">
-      <%= flash[:notice] %>
-    </div>
-    <div class="pull-right col-lg-1">
-      <button class="dismiss btn btn-info" onclick="dismissNotification()">Dismiss</button>
-    </div>
+    <%= flash[:notice] %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   </div>
 <% end %>
