fixed top-nav brand issue to nav to home correctly

--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -17,6 +17,7 @@
             </a>
             <ul class="dropdown-menu">
               <li class="dropdown-item"><%= link_to("Preferences", "#")%></li>
+              <li class="dropdown-item"><%=link_to("My Panel", admin_index_path)%></li>
               <li class="dropdown-item"><%=link_to("Logout", logout_path)%></li>
             </ul>
           </div>
