--- a/app/views/admin/episodes/edit.html.erb
+++ b/app/views/admin/episodes/edit.html.erb
@@ -1,3 +1,4 @@
+<% @page_title="Update Episode" %>
 <%= link_to("<< Back to List", {:action => 'index'}, :class=>"back-link") %>
 
 <div class="episodes update">
