--- a/app/views/admin/episodes/new.html.erb
+++ b/app/views/admin/episodes/new.html.erb
@@ -1,3 +1,4 @@
+<% @page_title="Create Episode" %>
 <%= link_to("<< Back to List", {:action => 'index'}, :class=>"back-link") %>
 
 <div class="episodes new">
