added padding on home index

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,19 +1,28 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.carousel-inner{
-  max-height:500px;
-  .item{
-    background-color:black;
-    img{
-      width:100%;
-      margin:auto;
-    }
-    a{
-      img{
-        width:70%;
-        margin:auto;
+.home{
+  #carousel{
+    .carousel-inner{
+      max-height:500px;
+      .item{
+        background-color:black;
+        img{
+          width:100%;
+          margin:auto;
+        }
+        a{
+          img{
+            width:70%;
+            margin:auto;
+          }
+        }
       }
     }
+  }
+
+  .main-section{
+    padding:0px 100px 0px 100px;
+    background-color: white;
   }
 }
