--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -16,7 +16,7 @@
                <%= session[:user_email] %><span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li class="dropdown-item"><%= link_to("Preferences", "#")%></li>
+              <!-- <li class="dropdown-item"><%= link_to("Preferences", "#")%></li>-->
               <li class="dropdown-item"><%=link_to("My Panel", admin_index_path)%></li>
               <li class="dropdown-item"><%=link_to("Logout", logout_path)%></li>
             </ul>
