--- a/app/views/shared/_notice.html.erb
+++ b/app/views/shared/_notice.html.erb
@@ -1,6 +1,10 @@
 <% if !flash[:notice].blank? %>
-  <div class = "notice row alert alert-info dismissable">
-    <%= flash[:notice] %>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <div class = "row notice-wrapper">
+    <div class="<%=setCols(4)%>"></div>
+    <div class = "notice alert alert-info dismissable <%=setCols(4)%>">
+      <%= flash[:notice] %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    </div>
+    <div class="<%=setCols(4)%>"></div>
   </div>
 <% end %>
