--- a/app/assets/stylesheets/access.scss
+++ b/app/assets/stylesheets/access.scss
@@ -2,5 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .login{
-  margin-top: 10px
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  width:700px;
 }
