--- a/app/views/admin/streamitems/index.html.erb
+++ b/app/views/admin/streamitems/index.html.erb
@@ -8,7 +8,7 @@
     <table class = "table table-bordered table-striped">
        <thead>
           <tr>
-            <th class="col-md-1">Position</th>
+            <th class="col-md-1">Start Time</th>
             <th class="col-md-2">Name</th>
             <th class="col-md-7">Description</th>
             <th class="col-md-2">Actions</th>
@@ -19,7 +19,7 @@
        <tbody>
           <% @streamitems.each do |streamitem| %>
              <tr>
-                <td><%= streamitem.position%></td>
+                <td><%= streamitem.start_time%></td>
                 <td><%= streamitem.episode.name %></td>
                 <td><%= streamitem.episode.description %></td>
                 <td><%= link_to "Remove", admin_streamitem_path(streamitem), method: :delete %></td>
