--- a/app/assets/stylesheets/access.scss
+++ b/app/assets/stylesheets/access.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .login{
+  .form-horizontal{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
