--- a/app/views/admin/access/login.html.erb
+++ b/app/views/admin/access/login.html.erb
@@ -1,28 +1,35 @@
 <% @page_title = "Login" %>
 <div class="container">
   <div class="login">
-    <div class="row form-horizontal">
-      <h2> Log In </h2>
+    <div class="panel panel-default form-horizontal">
+      <div class="panel-heading">
+        <h2>Log In</h2>
+      </div>
+      <div class="panel-body">
       <%=form_tag(:action=>'attempt_login') do %>
         <div class="form-group">
+          <div class="<%=setCols(2)%>"></div>
           <%= label_tag(:email, nil, :class=>"control-label #{setCols(2)}") %>
           <div class="<%=setCols(6)%>">
             <%= text_field_tag(:email,"", :class=>"form-control") %>
           </div>
-            <div class="<%=setCols(4)%>"></div>
+          <div class="<%=setCols(4)%>"></div>
         </div>
         <div class="form-group">
+          <div class="<%=setCols(2)%>"></div>
           <%= label_tag(:password, nil, :class=>"control-label #{setCols(2)}") %>
           <div class="<%=setCols(6)%>">
             <%= password_field_tag(:password,"", :class=>"form-control") %>
           </div>
-            <div class="<%=setCols(4)%>"></div>
+          <div class="<%=setCols(2)%>"></div>
         </div>
         <div class="form-group">
-          <div class="<%= setColOffset(2)%> <%=setCols(10)%>">
+          <div class="<%= setColOffset(4)%> <%=setCols(8)%>">
             <%= submit_tag("Log In",:class=>"btn btn-success") %>
           </div>
         </div>
       <% end %>
+      </div>
+    </div>
   </div>
 </div>
