--- a/app/views/shared/_notice.html.erb
+++ b/app/views/shared/_notice.html.erb
@@ -3,7 +3,7 @@
     <div class="<%=setCols(4)%>"></div>
     <div class = "notice alert alert-info <%=setCols(4)%>">
       <%= flash[:notice] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <button type="button" class="close dismiss" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div>
     <div class="<%=setCols(4)%>"></div>
   </div>
