began footer section

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -21,8 +21,9 @@
             <%= yield %>
           </div>
         </div>
+        <!--footer here-->
+        <%=render('shared/footer')%>
       </div>
-     <!--footer here-->
    </body>
 </html>
 <script type="text/javascript">
