--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,13 +1,15 @@
 html, body{
   height: 100%;
   min-height: 100%;
+  position: relative;
   margin: 0;
   padding: 0;
 }
 
 #main-container{
   padding: 0px 0px 0px 0px;
-  //height:100%;
+  position:relative;
+  min-height:100%;
   .row{
     margin:0;
     height:100%
@@ -99,20 +101,31 @@ html, body{
 }
 
 #main-content{
-  padding:0px;
-  .notice{
-    margin-top: 15px;
+  min-height:100%;
+  padding:0;
+  .notice-wrapper{
+    position:absolute;
+    top: 5px;
+    left:0px;
+    z-index: 1000;
+    height: auto;
+    max-height: 200px;
+    width:100%;
+    .notice{
+      background-color: rgba(#d9edf7, .9) !important;
+      margin-top: 15px;
+    }
   }
 }
-.notice-wrapper{
-  position:absolute;
-  top: 5px;
-  left:0px;
-  z-index: 1000;
-  height: auto;
-  max-height: 200px;
-  width:100%;
-  .notice{
-    background-color: rgba(#d9edf7, .9) !important;
-  }
+
+.push{
+  height:90px;
+}
+.footer{
+    /* Set the fixed height of the footer here */
+  height:80px;
+  background-color: #6B6B6B;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
