--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo);
+
 html, body{
   height: 100%;
   min-height: 100%;
@@ -7,6 +9,7 @@ html, body{
 }
 
 #main-container{
+  font-family: 'Arvo', serif;
   padding: 0px 0px 0px 0px;
   position:relative;
   min-height:100%;
