--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Arvo);
+@import url(https://fonts.googleapis.com/css?family=Oswald);
 
 html, body{
   height: 100%;
@@ -13,6 +14,9 @@ html, body{
   padding: 0px 0px 0px 0px;
   position:relative;
   min-height:100%;
+  h1,h2,h3{
+    font-family: 'Oswald', serif;
+  }
   .row{
     margin:0;
     height:100%
@@ -23,6 +27,7 @@ html, body{
   .navbar-header{
     padding-top:20px;
     .navbar-brand{
+      font-family: 'Oswald', serif;
       font-size: 2em;
       color:#fff;
     }
